--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a9be91cd",
    "metadata": {},
    "outputs": [],
@@ -59,6 +59,19 @@
     "# Return the result table in any order.\n",
     "\n",
     "# The result format is in the following example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "57ba6083",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SELECT e.name, b.bonus\n",
+    "# FROM Employee e\n",
+    "# LEFT JOIN Bonus b ON e.empId = b.empId\n",
+    "# WHERE b.bonus < 1000 OR b.bonus IS NULL;"
    ]
   }
  ],
