--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -73,6 +73,75 @@
     "# LEFT JOIN Bonus b ON e.empId = b.empId\n",
     "# WHERE b.bonus < 1000 OR b.bonus IS NULL;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02432aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 181. Employees Earning More Than Their Managers\n",
+    "# Easy\n",
+    "# Topics\n",
+    "# Companies\n",
+    "# SQL Schema\n",
+    "# Pandas Schema\n",
+    "# Table: Employee\n",
+    "\n",
+    "# +-------------+---------+\n",
+    "# | Column Name | Type    |\n",
+    "# +-------------+---------+\n",
+    "# | id          | int     |\n",
+    "# | name        | varchar |\n",
+    "# | salary      | int     |\n",
+    "# | managerId   | int     |\n",
+    "# +-------------+---------+\n",
+    "# id is the primary key (column with unique values) for this table.\n",
+    "# Each row of this table indicates the ID of an employee, their name, salary, and the ID of their manager.\n",
+    " \n",
+    "\n",
+    "# Write a solution to find the employees who earn more than their managers.\n",
+    "\n",
+    "# Return the result table in any order.\n",
+    "\n",
+    "# The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: \n",
+    "# Employee table:\n",
+    "# +----+-------+--------+-----------+\n",
+    "# | id | name  | salary | managerId |\n",
+    "# +----+-------+--------+-----------+\n",
+    "# | 1  | Joe   | 70000  | 3         |\n",
+    "# | 2  | Henry | 80000  | 4         |\n",
+    "# | 3  | Sam   | 60000  | Null      |\n",
+    "# | 4  | Max   | 90000  | Null      |\n",
+    "# +----+-------+--------+-----------+\n",
+    "# Output: \n",
+    "# +----------+\n",
+    "# | Employee |\n",
+    "# +----------+\n",
+    "# | Joe      |\n",
+    "# +----------+\n",
+    "# Explanation: Joe is the only employee who earns more than his manager."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4acfcbb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SELECT e.name AS Employee\n",
+    "# FROM Employee e\n",
+    "# JOIN Employee m ON e.managerId = m.id\n",
+    "# WHERE e.salary > m.salary"
+   ]
   }
  ],
  "metadata": {
