--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -142,6 +142,72 @@
     "# JOIN Employee m ON e.managerId = m.id\n",
     "# WHERE e.salary > m.salary"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "660d2532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 182. Duplicate Emails\n",
+    "# Easy\n",
+    "# Topics\n",
+    "# Companies\n",
+    "# SQL Schema\n",
+    "# Pandas Schema\n",
+    "# Table: Person\n",
+    "\n",
+    "# +-------------+---------+\n",
+    "# | Column Name | Type    |\n",
+    "# +-------------+---------+\n",
+    "# | id          | int     |\n",
+    "# | email       | varchar |\n",
+    "# +-------------+---------+\n",
+    "# id is the primary key (column with unique values) for this table.\n",
+    "# Each row of this table contains an email. The emails will not contain uppercase letters.\n",
+    " \n",
+    "\n",
+    "# Write a solution to report all the duplicate emails. Note that it's guaranteed that the email field is not NULL.\n",
+    "\n",
+    "# Return the result table in any order.\n",
+    "\n",
+    "# The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: \n",
+    "# Person table:\n",
+    "# +----+---------+\n",
+    "# | id | email   |\n",
+    "# +----+---------+\n",
+    "# | 1  | a@b.com |\n",
+    "# | 2  | c@d.com |\n",
+    "# | 3  | a@b.com |\n",
+    "# +----+---------+\n",
+    "# Output: \n",
+    "# +---------+\n",
+    "# | Email   |\n",
+    "# +---------+\n",
+    "# | a@b.com |\n",
+    "# +---------+\n",
+    "# Explanation: a@b.com is repeated two times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9c810d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SELECT email AS Email\n",
+    "# FROM Person\n",
+    "# GROUP BY email\n",
+    "# HAVING COUNT(*) > 1"
+   ]
   }
  ],
  "metadata": {
