--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -298,6 +298,78 @@
     "\n",
     "# LEFT JOIN REQUIRED BECAUSE WE NEED TO RETURN ALL FIRT THE  FILETER WITH WHERE CLAUSE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd8db68d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 196. Delete Duplicate Emails\n",
+    "# Solved\n",
+    "# Easy\n",
+    "# Topics\n",
+    "# Companies\n",
+    "# SQL Schema\n",
+    "# Pandas Schema\n",
+    "# Table: Person\n",
+    "\n",
+    "# +-------------+---------+\n",
+    "# | Column Name | Type    |\n",
+    "# +-------------+---------+\n",
+    "# | id          | int     |\n",
+    "# | email       | varchar |\n",
+    "# +-------------+---------+\n",
+    "# id is the primary key (column with unique values) for this table.\n",
+    "# Each row of this table contains an email. The emails will not contain uppercase letters.\n",
+    " \n",
+    "\n",
+    "# Write a solution to delete all duplicate emails, keeping only one unique email with the smallest id.\n",
+    "\n",
+    "# For SQL users, please note that you are supposed to write a DELETE statement and not a SELECT one.\n",
+    "\n",
+    "# For Pandas users, please note that you are supposed to modify Person in place.\n",
+    "\n",
+    "# After running your script, the answer shown is the Person table. The driver will first compile and run your piece of code and then show the Person table. The final order of the Person table does not matter.\n",
+    "\n",
+    "# The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: \n",
+    "# Person table:\n",
+    "# +----+------------------+\n",
+    "# | id | email            |\n",
+    "# +----+------------------+\n",
+    "# | 1  | john@example.com |\n",
+    "# | 2  | bob@example.com  |\n",
+    "# | 3  | john@example.com |\n",
+    "# +----+------------------+\n",
+    "# Output: \n",
+    "# +----+------------------+\n",
+    "# | id | email            |\n",
+    "# +----+------------------+\n",
+    "# | 1  | john@example.com |\n",
+    "# | 2  | bob@example.com  |\n",
+    "# +----+------------------+\n",
+    "# Explanation: john@example.com is repeated two times. We keep the row with the smallest Id = 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bc75fc58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DELETE p1\n",
+    "# FROM Person p1\n",
+    "# JOIN  Person p2\n",
+    "# ON p1.email = p2.email AND p1.id > p2.id"
+   ]
   }
  ],
  "metadata": {
