--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -370,6 +370,83 @@
     "# JOIN  Person p2\n",
     "# ON p1.email = p2.email AND p1.id > p2.id"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e8dceaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 197. Rising Temperature\n",
+    "# Solved\n",
+    "# Easy\n",
+    "# Topics\n",
+    "# Companies\n",
+    "# SQL Schema\n",
+    "# Pandas Schema\n",
+    "# Table: Weather\n",
+    "\n",
+    "# +---------------+---------+\n",
+    "# | Column Name   | Type    |\n",
+    "# +---------------+---------+\n",
+    "# | id            | int     |\n",
+    "# | recordDate    | date    |\n",
+    "# | temperature   | int     |\n",
+    "# +---------------+---------+\n",
+    "# id is the column with unique values for this table.\n",
+    "# There are no different rows with the same recordDate.\n",
+    "# This table contains information about the temperature on a certain day.\n",
+    " \n",
+    "\n",
+    "# Write a solution to find all dates' id with higher temperatures compared to its previous dates (yesterday).\n",
+    "\n",
+    "# Return the result table in any order.\n",
+    "\n",
+    "# The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: \n",
+    "# Weather table:\n",
+    "# +----+------------+-------------+\n",
+    "# | id | recordDate | temperature |\n",
+    "# +----+------------+-------------+\n",
+    "# | 1  | 2015-01-01 | 10          |\n",
+    "# | 2  | 2015-01-02 | 25          |\n",
+    "# | 3  | 2015-01-03 | 20          |\n",
+    "# | 4  | 2015-01-04 | 30          |\n",
+    "# +----+------------+-------------+\n",
+    "# Output: \n",
+    "# +----+\n",
+    "# | id |\n",
+    "# +----+\n",
+    "# | 2  |\n",
+    "# | 4  |\n",
+    "# +----+\n",
+    "# Explanation: \n",
+    "# In 2015-01-02, the temperature was higher than the previous day (10 -> 25).\n",
+    "# In 2015-01-04, the temperature was higher than the previous day (20 -> 30)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d8853e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "\n",
+    "# def rising_temperature(weather: pd.DataFrame) -> pd.DataFrame:\n",
+    "#     weather = weather.sort_values('recordDate').reset_index()\n",
+    "#     mask = weather[\"temperature\"] > weather[\"temperature\"].shift(1)\n",
+    "#     mask2 = (weather[\"recordDate\"] - weather[\"recordDate\"].shift(1)).dt.days == 1\n",
+    "#     result = weather[mask & mask2]\n",
+    "#     return result[['id']]"
+   ]
   }
  ],
  "metadata": {
