--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -518,6 +518,78 @@
     "#     activity.rename(columns={\"event_date\": \"first_login\"}, inplace=True)\n",
     "#     return activity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3837968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 584. Find Customer Referee\n",
+    "# Easy\n",
+    "# Topics\n",
+    "# Companies\n",
+    "# Hint\n",
+    "# SQL Schema\n",
+    "# Pandas Schema\n",
+    "# Table: Customer\n",
+    "\n",
+    "# +-------------+---------+\n",
+    "# | Column Name | Type    |\n",
+    "# +-------------+---------+\n",
+    "# | id          | int     |\n",
+    "# | name        | varchar |\n",
+    "# | referee_id  | int     |\n",
+    "# +-------------+---------+\n",
+    "# In SQL, id is the primary key column for this table.\n",
+    "# Each row of this table indicates the id of a customer, their name, and the id of the customer who referred them.\n",
+    " \n",
+    "\n",
+    "# Find the names of the customer that are not referred by the customer with id = 2.\n",
+    "\n",
+    "# Return the result table in any order.\n",
+    "\n",
+    "# The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: \n",
+    "# Customer table:\n",
+    "# +----+------+------------+\n",
+    "# | id | name | referee_id |\n",
+    "# +----+------+------------+\n",
+    "# | 1  | Will | null       |\n",
+    "# | 2  | Jane | null       |\n",
+    "# | 3  | Alex | 2          |\n",
+    "# | 4  | Bill | null       |\n",
+    "# | 5  | Zack | 1          |\n",
+    "# | 6  | Mark | 2          |\n",
+    "# +----+------+------------+\n",
+    "# Output: \n",
+    "# +------+\n",
+    "# | name |\n",
+    "# +------+\n",
+    "# | Will |\n",
+    "# | Jane |\n",
+    "# | Bill |\n",
+    "# | Zack |\n",
+    "# +------+"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b2837c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SELECT name\n",
+    "# FROM Customer\n",
+    "# WHERE referee_id != 2 OR referee_id IS NULL;"
+   ]
   }
  ],
  "metadata": {
