--- a/dsaPython/sql/Combine_two_table.ipynb
+++ b/dsaPython/sql/Combine_two_table.ipynb
@@ -743,6 +743,87 @@
     "    world = world[mask_1 | mask_2]\n",
     "    return world"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "187bfcb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 596. Classes More Than 5 Students\n",
+    "# Table: Courses\n",
+    "\n",
+    "# +-------------+---------+\n",
+    "# | Column Name | Type    |\n",
+    "# +-------------+---------+\n",
+    "# | student     | varchar |\n",
+    "# | class       | varchar |\n",
+    "# +-------------+---------+\n",
+    "# (student, class) is the primary key (combination of columns with unique values) for this table.\n",
+    "# Each row of this table indicates the name of a student and the class in which they are enrolled.\n",
+    " \n",
+    "\n",
+    "# Write a solution to find all the classes that have at least five students.\n",
+    "\n",
+    "# Return the result table in any order.\n",
+    "\n",
+    "# The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: \n",
+    "# Courses table:\n",
+    "# +---------+----------+\n",
+    "# | student | class    |\n",
+    "# +---------+----------+\n",
+    "# | A       | Math     |\n",
+    "# | B       | English  |\n",
+    "# | C       | Math     |\n",
+    "# | D       | Biology  |\n",
+    "# | E       | Math     |\n",
+    "# | F       | Computer |\n",
+    "# | G       | Math     |\n",
+    "# | H       | Math     |\n",
+    "# | I       | Math     |\n",
+    "# +---------+----------+\n",
+    "# Output: \n",
+    "# +---------+\n",
+    "# | class   |\n",
+    "# +---------+\n",
+    "# | Math    |\n",
+    "# +---------+\n",
+    "# Explanation: \n",
+    "# - Math has 6 students, so we include it.\n",
+    "# - English has 1 student, so we do not include it.\n",
+    "# - Biology has 1 student, so we do not include it.\n",
+    "# - Computer has 1 student, so we do not include it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9a8df0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def find_classes(courses: pd.DataFrame) -> pd.DataFrame:\n",
+    "    if courses.empty:\n",
+    "        return pd.DataFrame(columns=[\"class\"])\n",
+    "    \n",
+    "    grouped = courses.groupby(\"class\")\n",
+    "    max_class_name = []\n",
+    "    \n",
+    "    for k, v in grouped.groups.items():\n",
+    "        if len(v) >= 5:\n",
+    "            max_class_name.append(k)\n",
+    "\n",
+    "    return pd.DataFrame(max_class_name, columns=[\"class\"])"
+   ]
   }
  ],
  "metadata": {
